[package]
name = "turborand"
version = "0.9.0"
edition = "2021"
authors = ["Gonçalo Rica Pais da Silva <bluefinger@gmail.com>"]
description = "Fast random number generators"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Bluefinger/turborand"
keywords = ["fast", "rand", "random", "wyrand", "chacha"]
categories = ["algorithms", "no-std"]
exclude = ["/.*"]
resolver = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion = { version = "0.4", default-features = false }
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.4"

[dependencies]
bytemuck = { version = "1", features = ["min_const_generics"], optional = true }
getrandom = { version = "0.2", optional = true }
rand_core = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0"

[[bench]]
name = "rand_bench"
harness = false

[features]
default = ["wyrand", "fmt", "std"]
std = ["alloc", "dep:getrandom"]
alloc = []
fmt = []
atomic = ["wyrand"]
wyrand = []
chacha = ["dep:bytemuck"]
rand = ["dep:rand_core"]
serialize = ["dep:serde", "fmt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
